# vulkan-toy-engine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  Readme.md  TODO.md  api.cpp  api.hpp  api_util.hpp  base.hpp  bugs.md  econf.h  engine.cpp  engine.hpp  entity.cpp  entity.hpp  entry.cpp  enum_helper.hpp  gui.cpp  gui.hpp  hud.lua  instance.cpp  instance.hpp  launch.sh  lua_binding_gen.rb  lua_wrapper.cpp  lua_wrapper.hpp  net.cpp  net.hpp  pathgen.hpp  scene.cpp  scene.hpp  server.cpp  server.hpp  sound.cpp  sound.hpp  state.cpp  state.hpp  team.cpp  (+6 more)
debug/: block_unloading.c
libs/: vk_mem_alloc.h
lua/: bindings.cpp  glm_metatables.lua  keys.lua  mods.lua
models/: spaceship.mtl  sphere.mtl
modules/: FindBrotli.cmake
shaders/: compile.sh  hud.frag  hud.vert  line.frag  line.vert  render_modes.h  sdf_blit.comp  shader.frag  shader.vert  shadow.vert
unitai/: idle_combat_behavior.lua  shooter_tester.lua
units/: asteroid.lua  constructor.lua  miner.lua  ship.lua  shipyard.lua  turret.lua
weapons/: basic_beam.lua  basic_guided.lua  basic_plasma.lua
